# Project03_46W38_MLforecasting

./: LICENSE  README.md  main.py  pyproject.toml  tempCodeRunnerFile.py
report/: report.md
src/windpower_forecast/: GUI.py  __init__.py  data.py  forecaster_io.py  forecaster_plot.py  main.py  metrics.py  models.py
