[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windpower-forecast"
version = "0.1.1"
description = "GUI-based wind power ML forecasting tool for DTU 46W38 Project03"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Chang, Chihyang", email = "ugozhang1990@email.com" }
]

license = { text = "MIT" }

keywords = ["wind", "forecast", "machine-learning", "energy", "DTU"]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "tkcalendar",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
windpower-forecast = "windpower_forecast.main:run"

[project.urls]
Homepage = "https://github.com/Ugozhang"
Repository = "https://github.com/Ugozhang/Project03_46W38_MLforecasting"

[tool.hatch.build]
packages = ["src/windpower_forecast"]

# include non-python resource such as CSV
include = [
  "inputs/*"
]
